# ahc001

./: .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  a.sh  b.sh  buiid-push.sh  c.sh  concat.py  do_lambda.py  lambda-test-body.json  opt.py  sa.db  sample_stats.py  scores.txt  scores_500ms.txt  simple-mc_non-n-specified_100_2.db  simple-mc_non-n-specified_100_3.db  simple-mc_non-n-specified_100_4.db  submit.patch  submit.sh  test.txt
benches/: rng.rs
cdk/: .gitignore  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
simple_mc/: Cargo.toml
simple_mc/src/: main.rs
simulated-annealing/: Cargo.toml
simulated-annealing/src/: lib.rs  main.rs
src/: lib.rs
submit/: Cargo.toml
submit/src/: main.rs
tools/: README.ja.md  vis.html
tools/in/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+957 more)
tools/in/050/: 0001.txt  0003.txt  0006.txt  0008.txt  0011.txt  0012.txt  0014.txt  0015.txt  0017.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0027.txt  0031.txt  0032.txt  0034.txt  0035.txt  0037.txt  0039.txt  0040.txt  0043.txt  0045.txt  0046.txt  0048.txt  0051.txt  0053.txt  0055.txt  0057.txt  0059.txt  0061.txt  0064.txt  0066.txt  0067.txt  0068.txt  0069.txt  0072.txt  0074.txt  (+14 more)
tools/in/051/: 0002.txt  0004.txt  0006.txt  0011.txt  0016.txt  0020.txt  0021.txt  0023.txt  0024.txt  0025.txt  0026.txt  0031.txt  0032.txt  0033.txt  0035.txt  0037.txt  0042.txt  0045.txt  0047.txt  0049.txt  0050.txt  0056.txt  0057.txt  0059.txt  0060.txt  0062.txt  0064.txt  0065.txt  0066.txt  0067.txt  0070.txt  0071.txt  0074.txt  0076.txt  0078.txt  0079.txt  0082.txt  0083.txt  0086.txt  0087.txt  (+4 more)
tools/in/052/: 0001.txt  0003.txt  0004.txt  0005.txt  0008.txt  0009.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0021.txt  0023.txt  0025.txt  0026.txt  0027.txt  0029.txt  0032.txt  0034.txt  0036.txt  0037.txt  0039.txt  0040.txt  0044.txt  0045.txt  0046.txt  0047.txt  0049.txt  0050.txt  0051.txt  0053.txt  0054.txt  0056.txt  0061.txt  0063.txt  0065.txt  0066.txt  0070.txt  0071.txt  0074.txt  (+10 more)
tools/in/053/: 0001.txt  0005.txt  0006.txt  0007.txt  0008.txt  0010.txt  0011.txt  0012.txt  0014.txt  0016.txt  0019.txt  0021.txt  0022.txt  0023.txt  0026.txt  0027.txt  0029.txt  0030.txt  0031.txt  0033.txt  0036.txt  0037.txt  0039.txt  0041.txt  0042.txt  0043.txt  0045.txt  0046.txt  0047.txt  0049.txt  0050.txt  0053.txt  0060.txt  0062.txt  0065.txt  0066.txt  0072.txt  0073.txt  0077.txt  0079.txt  (+12 more)
tools/in/054/: 0003.txt  0004.txt  0005.txt  0006.txt  0012.txt  0014.txt  0016.txt  0019.txt  0020.txt  0022.txt  0023.txt  0024.txt  0027.txt  0028.txt  0032.txt  0034.txt  0036.txt  0038.txt  0039.txt  0044.txt  0046.txt  0047.txt  0048.txt  0049.txt  0055.txt  0056.txt  0060.txt  0061.txt  (+22 more)
(+19850 files in other folders)
