[package]
name = "ahc001"
version = "0.1.0"
authors = ["Nakayama Daiju <42.daiju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
rand = { version = "0.7", features = ["small_rng"] }

[workspace]
members = [
    "tools",
    "submit",
]