[package]
name = "ahc001"
version = "0.1.0"
authors = ["Nakayama Daiju <42.daiju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "simulated-annealing",
    "tools",
]

[dependencies]
proconio = "0.3"
simulated-annealing = { path = "./simulated-annealing" }

anyhow = "*"
reqwest = { version = "0.11.1", default-features = false }
tokio = { version = "1.2", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }
rand = "0.7"
rand_pcg = "0.2"

[[bench]]
name = "rng"
harness = false
