[package]
name = "simulated-annealing"
version = "0.1.0"
authors = ["Nakayama Daiju <42.daiju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.3"
rand = "0.7"
rand_pcg = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
