[package]
name = "submit"
version = "0.1.0"
authors = ["Nakayama Daiju <42.daiju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
cookie_0_12_0 = { package = "cookie", version = "=0.12.0" }
cookie_store = "0.11.0"
itertools = "0.9.0"
serde = { version = "1.0.116", features = ["derive"] }
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["blocking", "rt-core", "macros", "time"] }
ureq_1_0_0 = { package = "ureq", version = "=1.0.0", default-features = false, features = ["tls"] }
url = "2.1.1"
